[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ratethrottle"
version = "1.2.0"
description = "Advanced rate limiting and DDoS protection for Python web applications"
readme = "README.md"

[author]
name = "MykeChidi"

license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Security",
]

keywords = ["rate-limiting", "backend", "throttlling", "api", "ddos", "security"]
dependencies = [
    "pyyaml>=6.0",
] 

[project.optional-dependencies]
redis = ["redis>=7.0.0"]
flask = ["flask>=3.0.0"]
fastapi = ["fastapi>=0.129.0", "starlette>=0.52.0"]
django = ["django>=5.2.0"]
websocket = ["python-socketio>=5.7.0", "channels>=4.0.0"]
grpc = ["grpcio>=1.50.0"]
graphql = ["graphql-core>=3.2.0"]

protocols = [
    "websockets>=10.0",
    "python-socketio>=5.7.0",
    "channels>=4.0.0",
    "grpcio-core>=1.50.0",
    "graphql>=3.2.0"
]

frameworks = [
    "redis>=7.0.0",
    "flask>=3.0.0",
    "fastapi>=0.100.0",
    "starlette>=0.52.0",
    "django>=5.2.0"
]

all = [
    "redis>=7.0.0",
    "flask>=3.0.0",
    "fastapi>=0.100.0",
    "starlette>=0.52.0",
    "django>=5.2.0",
    "websockets>=10.0",
    "python-socketio>=5.7.0",
    "channels>=4.0.0",
    "grpcio-core>=1.50.0",
    "graphql>=3.2.0"
]

dev = [
    "pytest>=9.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.10.0",
    "black>=26.0.0",
    "flake8>=7.0.0",
    "mypy>=1.0.0",
    "isort>=7.0.0",
    "bandit>=1.9.0",
    "pre-commit>=4.0.0",
    "types-PyYAML>=6.0.0",
    "types-redis>=4.5.0", 
]

[project.urls]
Documentation = "https://ratethrottle.readthedocs.io"
Repository = "https://github.com/MykeChidi/ratethrottle"
"Bug Tracker" = "https://github.com/MykeChidi/ratethrottle/issues"

[project.scripts]
ratethrottle = "ratethrottle.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ratethrottle*"]
exclude = ["tests*", "examples*", "docs*"]

[tool.setuptools.package-data]
ratethrottle = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=ratethrottle --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["ratethrottle"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
